--- a/기계번역.md
+++ b/기계번역.md
@@ -73,4 +73,17 @@
 
 ## 10.4 Attention
 
-- Decoder가 마지막 
+- Decoder가 마지막 은닉 상태뿐만 아니라 encoder의 숨겨진 모든 은닉 상태로부터 정보를 얻을 수 있도록 하는 방법
+- 모든 encoder의 은닉 상태의 가중 합계를 취하여 단일 고정 길이 vector c를 만드는ㄱ ㅓㅅ
+- Decoder가 현재 생성하고 있는 token과 관련된 source text의 특정 부분에 초점을 맞춤
+- Attention은 static context vector를 decoder의 각 token에 대해 다른 encoder 은닉 상태에서 동적으로 파생된 vector 대체
+- 이 context vector는 각 디코딩 단계 i와 함께 새로 생성되고 모든 인코더의 은닉 상태를 고려
+
+![image](https://user-images.githubusercontent.com/80622859/204007872-e5c15bad-fedc-40db-b943-7422091eb8b4.png)
+
+- $c_i$를 계산하는 첫 번째 단계는 각 encoder state에 얼마나 초점을 맞출 것인지, 각 encoder state가 $h^d_i$에서 얻은 decoder 상태와 얼마나 관련이 있는지 계산 
+- Dot production attention score : 단순한 유사성을 계산
+![image](https://user-images.githubusercontent.com/80622859/204008136-94cd2723-1254-4e85-88e8-626102f4736e.png)
+
+![image](https://user-images.githubusercontent.com/80622859/204008156-6c509a07-bd14-4821-a29b-e9b938dfac9e.png)
+
