--- a/기계번역.md
+++ b/기계번역.md
@@ -87,3 +87,61 @@
 
 ![image](https://user-images.githubusercontent.com/80622859/204008156-6c509a07-bd14-4821-a29b-e9b938dfac9e.png)
 
+- 마지막으로 $alpha$의 분포를 고려할 때, 모든 encoder hidden state에 대한 가중평균을 취함으로써 현재 decoder state에 대한 fixed length sequence vector를 계산
+
+![image](https://user-images.githubusercontent.com/80622859/204008340-5fdd2a7a-4179-4938-9f74-bd3161a337d6.png)
+
+
+- 동적 update
+
+![image](https://user-images.githubusercontent.com/80622859/204008368-307b45e7-5263-4445-84b5-fa6f96797ff4.png)
+
+10.5 Beam Search
+
+- 평가값이 우수한 일정 개수의 확장 가능한 node만을 memory에 관리하면서 최상 우선 탐색을 적용하는 기법 
+- Greedy decoding : 사후 판단으로 최고의 선택이 되었는지 여부에 관계없이 국소적으로 최적의 선택(각 단계에서 생성할 수 있는 가장 가능성이 높은 단일 토큰을 선택)
+- 항상 최적은 아님
+- 지금 decoder에게 잘 보이는 token이 나중에 잘못되었다는 것이 밝혀질 수 있음
+
+- P(w_n|w_1, w_2, ..., w_n-1)을 모든 단어에 대해 구한 후 상위 K개의 단어만 남기고 나머지는 고려대상에서 제외
+- 모든 경우에 대해 다 계산
+- 최종적으로 K개의 sequence가 생성
+
+## 10.6 Encoder-Decoder with Transformers
+
+![image](https://user-images.githubusercontent.com/80622859/204009790-280edb0d-bda5-4e45-91c4-fc9a90415165.png)
+
+![image](https://user-images.githubusercontent.com/80622859/204009838-792cb060-8f92-438f-ade1-b16243eeb565.png)
+
+## 10.7 Some practical details on building MT systems
+
+### 10.7.1 Tokenization
+
+- 기계 번역은 일반적으로 고정된 어휘 사용
+- BPE나 wordpiece algorithm 사용
+
+## 10.8 MT Evaluation
+
+1. 적절성: 번역문이 원문의 정확한 의미를 얼마나 잘 포착하는지. 때로는 충실함 또는 충실함이라고도 합니다.
+2. 유창성: 번역이 대상 언어로 얼마나 유창한지(문법적이고, 명확하며, 읽기 쉽고, 자연스러운지).
+
+### 10.8.1 Automatic Evaluation
+
+#### Automatic Evaluation by Character Overlap: chrF
+
+- Character F-score
+
+![image](https://user-images.githubusercontent.com/80622859/204010275-302aaf2a-dfcb-46b9-945c-edeadeff2464.png)
+
+- 일반적으로 재현율은 정밀도의 2배 비율로 가중함
+
+![image](https://user-images.githubusercontent.com/80622859/204010353-aab8466d-c315-465e-b3c3-3eb2ed57db0a.png)
+
+![image](https://user-images.githubusercontent.com/80622859/204010379-3878ea64-3079-4d5d-9430-4075d460d4c1.png)
+
+- 공백 제거
+- N-gram으로 쪼개서 계산
+
+![image](https://user-images.githubusercontent.com/80622859/204010421-a72f3f79-4791-4046-bd0e-8db2275770ec.png)
+
+- 전에는 단순 정밀도에 기반한 BLEU(BiLangual Evaluation Understudy) 사용
