--- a/언어모형전이학습.md
+++ b/언어모형전이학습.md
@@ -44,4 +44,25 @@
 - SpanBERT
 - BERT와 마찬가지로 MLM 학습
 - Span의 어떤 단어가 예측되고 있는지를 알려 주는 positional embedding과 함께 masking span의 바로 앞과 뒤에 있는 단어와 연관된 output vector를 사용하여 이루어짐 
-- 
+- 최종 손실은 BERT MLM 손실과 SBO(Span Boundary Objective) 손실의 합
+- SBO : Masking span 내의 단어를 바로 앞과 뒤의 단어로부터 예측하는 모형
+
+![image](https://user-images.githubusercontent.com/80622859/204096380-54703ce4-4ccf-4c57-a7c6-3069fa497d91.png)
+
+### 3. Next Sentence Prediction
+
+- Masking based training : 효과적인 단어 수준 표현을 생성하는 것이 목적
+- 문장 쌍 간의 관계를 결정하는 것도 학습해야 함
+- Pair phrase extraction(두 문장이 유사한 의미를 갖는지), entailment(두 문장의 의미가 서로 모순되는지), discource coherence(두 이웃 문장이 일관된 담론을 형성하는지)
+- Next Sentence Prediction(NSP)
+- 실제 인접 문장 쌍으로 구성되는지 아니면 관련이 없는 문장 쌍으로 구성되는 예측
+- 반은 제대로 반은 무작위로 배치
+- [CLS], [SEP] tokens
+- [CLS] : 입력 문장 쌍 앞에 추가
+- [SEP] : 문장 사이와 두 번째 문장의 최종 token 뒤에 배치
+- 위의 tokens도 embedding
+
+![image](https://user-images.githubusercontent.com/80622859/204096608-f4d0bb36-d110-4a8f-9ab0-9a8a3b17daf3.png)
+
+### 4. Training Regimes
+- 8억 단어 말뭉치와 25억 단어 말뭉치로 구성
