--- a/언어모형전이학습.md
+++ b/언어모형전이학습.md
@@ -66,3 +66,7 @@
 
 ### 4. Training Regimes
 - 8억 단어 말뭉치와 25억 단어 말뭉치로 구성
+
+### 5. Contextual Embedding
+- 모형의 출력이 입력의 각 token에 대한 상황별 embedding을 구성한다고 생각할 수 있음
+- 마지막 4개 층 각각에서의 출력값 => 하나의 단어 vector
