--- a/언어모형전이학습.md
+++ b/언어모형전이학습.md
@@ -72,3 +72,15 @@
 - 마지막 4개 층 각각에서의 출력값 => 하나의 단어 vector
 
 ## 3. Transfer Learning through Fine-Tuning
+
+### 1. Sequence Classification
+- 전체 시퀀스를 나타내는 추가 vector가 모형에 추가
+- 이 벡터는 문장 임베딩이라고 함
+- BERT에서는 [CLS] token이 진행
+
+![image](https://user-images.githubusercontent.com/80622859/204097517-c1a42153-86a6-43df-8333-c93ecf574696.png)
+
+### 2. Sequence Labeling
+
+![image](https://user-images.githubusercontent.com/80622859/204097542-bab53d18-f7fd-49c8-8c7a-92e532b5232b.png)
+
