--- a/model/T5.md
+++ b/model/T5.md
@@ -21,3 +21,41 @@
 - Transformer의 layer normalization에 사용되는 편향을 제거하고 rescale만 수행
 - Absolute positional embedding 대신에 relative positional embedding 사용
 - 모형의 층 전체에서 position embedding parameter sharing
+
+### Denoising Corrupted Span
+
+![image](https://user-images.githubusercontent.com/80622859/207850423-97d484f2-7df6-42f0-9a2d-0ad33da74b55.png)
+
+- SpanBERT 논문에서 제안된 기법 사용
+- Span을 하나의 [MASK] token으로 
+- 성능 향상과 계산 효율
+
+### Why Denoising Span?
+
+![image](https://user-images.githubusercontent.com/80622859/207850572-00168825-1beb-48d4-85d2-42aef9bde1a7.png)
+
+
+- Prefix language modeling : GPT와 같은 standard language modeling
+- BERT-style : BERT에서 사용되는 masked language modeling 방식
+- Deshuffling : Sequence를 입력으로 받아 순서를 섞은 후 원래 sequence를 목표로 해서 복구하는 방식
+
+### C4 Dataset
+- Colossal Clean Crawled Corpus
+1. 마침표, 느낌표, 물음표, 온점으로 끝나는 줄만 
+2. 문장 5개 미만은 제거, 3단어 이상으로 이루어진 줄만
+3. 비속어 담은 문장 제거
+4. JavaScript 단어 들어간 줄 제거
+5. 무의미한 문장 제거
+6. 중괄호 포함한 문장 제거
+7. 중복 문장 제거(3번 이상 나올 시 하나만 남김
+- langdetect를 통해 영어로만 이루어진 corpus 구성
+
+### Multi-task pre-training
+- 하나의 비지도 작업에 대해서 사전학습을 진행한 후 미세조정하는 대신에 여러 종류의 작업에 대해서 한 번에 학습을 진행하는 것
+- Multi-task-pre-training + fine-tuning
+
+## Final T5 Model & Takeaways
+- Text-to-Text Framework
+- Original Transformer Architecture
+- Denoising Span Objective
+- C4 Dataset
