--- a/순환신경망/심화순환신경망.md
+++ b/순환신경망/심화순환신경망.md
@@ -23,4 +23,45 @@
 
 - Cell state : 기억을 오랫동안 유지할 수 있는 구조, 새로운 특징을 덧셈으로 받는 구조(Residual Network)
 - Hidden state : 계층의 출력/다음 time step으로 넘기는 정보
-- RNN과 달리, cell state가 있어서 기억에 관한 부분을 전
+- RNN과 달리, cell state가 있어서 기억에 관한 부분을 전담
+
+### Forget gate
+
+![image](https://user-images.githubusercontent.com/80622859/222882929-1b69e47e-0ea4-4e52-8d44-cd7fc51f7b24.png)
+
+- Sigomid 활성 함수로, 0~1의 출력 값을 가짐
+- Cell state에 이를 곱해 주어서 얼만큼 잊을지를 결정
+
+### Input gate
+
+![image](https://user-images.githubusercontent.com/80622859/222883246-9d48fef3-9c68-4480-b8ae-b5135dbdbc8c.png)
+
+- Sigmoid 활성 함수로, 0~1의 출력 값을 가짐
+- 새롭게 추출한 특징을 얼만큼 사용할 지 결정
+
+### Output Gate
+
+![image](https://user-images.githubusercontent.com/80622859/222883398-3216a33f-ed44-4b5a-a7c8-de5439dcace1.png)
+
+- Sigmoid 활성 함수로, 0~1의 출력 값을 가짐
+- Cell로부터 출력을 얼마나 내보낼지 결정하는 역할
+- 경사 폭발 문제를 막기 위해 tanh 함수 사용
+
+## GRU(Gated Recurrent Unit)
+
+![image](https://user-images.githubusercontent.com/80622859/222883485-6a1cd7d6-0192-451c-a01d-67a7eadc0609.png)
+
+- Cell state가 없고, hidden state만 존재
+- Forget gate와 input gate 결합
+- Reset gate 추가
+
+### Forget gate & Input gate
+
+- LSTM과 동일한 forget gate를 사용
+- forget gate를 1에서 빼서 input gate로 사용
+
+### Reset gate
+
+- Sigmoid 활성 함수로, 0~1의 값
+- 이전 은닉 상태를 얼마나 사용할지 정하는 역할
+- 0에 가까운 값이 되면 reset 됨.(Ex. 새 문장의 시작)
