--- a/순환신경망/심화순환신경망.md
+++ b/순환신경망/심화순환신경망.md
@@ -19,11 +19,22 @@
 - Vanilla RNN을 개선한 구조
 - 기억할 것은 오래 기억하고, 잊을 것은 빨리 잊어버리자
 
-### Cell state, hidden state
+### Cell state
 
-- Cell state : 기억을 오랫동안 유지할 수 있는 구조, 새로운 특징을 덧셈으로 받는 구조(Residual Network)
-- Hidden state : 계층의 출력/다음 time step으로 넘기는 정보
+![image](https://user-images.githubusercontent.com/80622859/222884556-9d4e1fb5-fc54-4d69-9129-e15a7dcfa69f.png)
+
+- 기억을 오랫동안 유지할 수 있는 구조, 새로운 특징을 덧셈으로 받는 구조(Residual Network)
 - RNN과 달리, cell state가 있어서 기억에 관한 부분을 전담
+- 기억을 총괄하는 memory 역할
+- 여러 차원으로 되어 있어, 각 차원은 특정 정보를 기억
+- Hadamard 연산자(element-wise)의 특성으로 인해, 특징 별로 기억하고, 잊고, 새로이 정보를 받을 수 있음
+
+### hidden state
+
+- 계층의 출력/다음 time step으로 넘기는 정보
+- Cell state에 tanh activation을 적용한 후, output gate를 선별하여 출력
+- tanh를 사용하는 이유는 출력 값의 범위가 -1~1로 제한두기 위함 
+
 
 ### Forget gate
 
@@ -31,6 +42,7 @@
 
 - Sigomid 활성 함수로, 0~1의 출력 값을 가짐
 - Cell state에 이를 곱해 주어서 얼만큼 잊을지를 결정
+- 특징은 여러 차원으로 되어 있으므로, 특징별로 기억할지 말지를 결정할 수 있음
 
 ### Input gate
 
@@ -38,6 +50,8 @@
 
 - Sigmoid 활성 함수로, 0~1의 출력 값을 가짐
 - 새롭게 추출한 특징을 얼만큼 사용할 지 결정
+- 새로운 입력을 받고자 하는 정도를 나타냄
+- 특징은 여러 차원으로 되어 있으므로, 특징별로 받아들일지 말지를 결
 
 ### Output Gate
 
@@ -45,6 +59,7 @@
 
 - Sigmoid 활성 함수로, 0~1의 출력 값을 가짐
 - Cell로부터 출력을 얼마나 내보낼지 결정하는 역할
+- Cell state 중 어떤 특징을 출력할지 결정 
 - 경사 폭발 문제를 막기 위해 tanh 함수 사용
 
 ## GRU(Gated Recurrent Unit)
