--- a/순환신경망/심화순환신경망.md
+++ b/순환신경망/심화순환신경망.md
@@ -66,6 +66,8 @@
 
 ![image](https://user-images.githubusercontent.com/80622859/222883485-6a1cd7d6-0192-451c-a01d-67a7eadc0609.png)
 
+![image](https://user-images.githubusercontent.com/80622859/222884695-b9ccc81a-3ddc-4f3d-8272-0801c05fb45d.png)
+
 - Cell state가 없고, hidden state만 존재
 - Forget gate와 input gate 결합
 - Reset gate 추가
@@ -73,6 +75,7 @@
 ### Forget gate & Input gate
 
 - LSTM과 동일한 forget gate를 사용
+- LSTM의 forget gate와 output gate를 겸함
 - forget gate를 1에서 빼서 input gate로 사용
 
 ### Reset gate
@@ -80,3 +83,10 @@
 - Sigmoid 활성 함수로, 0~1의 값
 - 이전 은닉 상태를 얼마나 사용할지 정하는 역할
 - 0에 가까운 값이 되면 reset 됨.(Ex. 새 문장의 시작)
+- Reset된 특징은 현재 time step부터 전결합계층 입력에서 제외
+
+### Hidden state
+
+- Reset gate, forget gate를 모두 적용하여 은닉 상태를 계산
+- LSTM의 cell state와 은닉 상태 역할을 모두 겸함 
+
